--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
             border-right: 2px solid white;
             height: 100%;
         }
+
+        #dole {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+        }
     </style>
 </head>
 
 <body style="background-color: rgb(158, 158, 158);">
+    <div id="dole">a</div>
     <canvas id="canvas" style="display: block; margin: auto;" />
 
     <script src="https://webgl2fundamentals.org/webgl/resources/twgl-full.min.js"></script>
