--- a/index.html
+++ b/index.html
@@ -25,15 +25,34 @@
             left: 20px;
         }
     </style>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </head>
 
-<body style="background-color: rgb(158, 158, 158);">
-    <div id="dole">a</div>
+<body style="background-color: rgb(158, 158, 158);" class="bg-info">
+    <div style="width: 200px;" class="fixed-top p-3 bg-dark text-white m-2 rounded">
+        <label for="maxHeight" class="form-label">Altura máxima dos pŕedios</label>
+        <input type="range" class="form-range" min="1" max="9" id="maxHeight" >
+
+        <label for="blockSize" class="form-label">Tamanho dos quarteirões</label>
+        <input type="range" class="form-range" min="4" max="12" step="2" id="blockSize" >
+        <button id="randomize" class="btn btn-primary w-100">Gerar</button>
+
+    </div>
+    
+    <!-- <div style="width: 200px;" class="fixed-top start-50 translate-middle-x p-2 mt-2 rounded bg-dark">
+        <button id="randomize" class="btn btn-primary w-100">Aleatorizar</button>
+    </div> -->
+
     <canvas id="canvas" style="display: block; margin: auto;" />
 
     <script src="https://webgl2fundamentals.org/webgl/resources/twgl-full.min.js"></script>
     <script src="https://webgl2fundamentals.org/webgl/resources/m4.js"></script>
-    
+
     <!-- <script src="retrieve.js"></script> -->
     <script src="main.js" type="module"></script>
 </body>
